force-app/main/default/objects/assessed_premia__c/assessed_premia__c.object-meta.xml
<CustomObject>
    <label>Assessed premia</label>
    <nameField>
        <displayFormat>ASP-{000000000}</displayFormat>
        <label>assessed premia Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessed premias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>