force-app/main/default/objects/assessed_premia__c/fields/Default_currency__c.field-meta.xml
<CustomField>
    <fullName>Default_currency__c</fullName>
    <label>Curr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>