force-app/main/default/objects/assessed_premia__c/fields/Gross_net_indicator__c.field-meta.xml
<CustomField>
    <fullName>Gross_net_indicator__c</fullName>
    <label>G/n</label>
    <length>255</length>
    <type>Text</type>
</CustomField>