force-app/main/default/objects/assessed_premia__c/fields/No_quotation_exists__c.field-meta.xml
<CustomField>
    <fullName>No_quotation_exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoQ</label>
    <type>Checkbox</type>
</CustomField>