force-app/main/default/objects/assessed_premia__c/fields/Quotation_number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_number__c</fullName>
    <label>Quotation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>