force-app/main/default/objects/assessed_premia__c/fields/Quotation_source__c.field-meta.xml
<CustomField>
    <fullName>Quotation_source__c</fullName>
    <label>QtSrc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>