force-app/main/default/objects/assessed_premia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Default_per__c</columns>
    <columns>Price__c</columns>
    <columns>Quotation_source__c</columns>
    <columns>Quotation_number__c</columns>
    <columns>Quotation_date__c</columns>
    <columns>Quotation_type__c</columns>
    <columns>Default_UoM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>